--- a/html/createDeed.html
+++ b/html/createDeed.html
@@ -46,50 +46,56 @@
 	<div class="container-fluid">
 		<div class="container  bg-light">
 
-				<form id="formGetDeed">
+				<form id="formGetDeed" class="needs-validation" novalidate>
 					<div class="row justify-content-start">
-						<div class="form-group container"><br><h2>Create Deed</h2></div>
+						<div class="form-group container"><br><h2>สร้างโฉนดที่ดิน</h2></div>
 						<div class="col-md-6">
 						  	<div class="form-group container col-md-11"><h4>ตำแหน่งที่ดิน</h4></div>
 							<div class="form-group container col-md-11">
-								<label for="section">Section</label>
-								<input type="text" class="form-control" id="Csection" placeholder="หมายเลขแผ่นระวางแผนที่">
+								<label for="section">หมายเลขแผ่นระวางแผนที่</label>
+								<input type="text" class="form-control" id="Csection" placeholder="" required>
+								<div class="invalid-feedback">
+                	กรุณากรอกข้อมูลในช่องนี้
+              	</div>
 							</div>
 							<div class="form-group container col-md-11">
-								<label for="numberOfsection">Number Of Section</label>
-								<input type="text" class="form-control" id="CnumberOfsection" placeholder="เลขที่ดิน">
+								<label for="numberOfsection">เลขที่ดิน</label>
+								<input type="text" class="form-control" id="CnumberOfsection" placeholder="" required>
+								<div class="invalid-feedback">
+                	กรุณากรอกข้อมูลในช่องนี้
+              	</div>
 							</div>
 							<div class="form-group container col-md-11">
-								<label for="surveyPage">SurveyPage</label>
-								<input type="text" class="form-control" id="CsurveyPage" placeholder="หน้าสำรวจ">
-							</div>
-							<div class="form-group container col-md-11">
-								<label for="district">District</label>
-								<input type="text" class="form-control" id="Cdistrict" placeholder="ตำบล">
+								<label for="district">ตำบล</label>
+								<input type="text" class="form-control" id="Cdistrict" placeholder="" required>
+								<div class="invalid-feedback">
+                	กรุณากรอกข้อมูลในช่องนี้
+              	</div>
 							</div>
 						</div>
 						<div class="col-md-6">
 						  	<div class="form-group container col-md-11"><h4>โฉนดที่ดิน</h4></div>
 						  	<div class="form-group container col-md-11">
-						      <label for="documentNumber">Document Number</label>
-						      <input type="text" class="form-control" id="CdocumentNumber" placeholder="เลขที่โฉนด">
+						      <label for="documentNumber">เลขที่โฉนด</label>
+						      <input type="text" class="form-control" id="CdocumentNumber" placeholder="" required>
+									<div class="invalid-feedback">
+	                	กรุณากรอกข้อมูลในช่องนี้
+	              	</div>
 						    </div>
-							<div class="w-100"></div>
-							<div class="form-group container col-md-11">
-						      <label for="bookNo">Book Number</label>
-						      <input type="text" class="form-control" id="CbookNo" placeholder="เล่ม,แฟ้มรวมโฉนด">
-						    </div>
-						  	<div class="form-group container col-md-11">
-						      <label for="bookPage">Book Page</label>
-						      <input type="text" class="form-control" id="CbookPage" placeholder="ระบุหน้าในเล่ม">
-						    </div>
-							<div class="form-group container col-md-11">
-						      <label for="county">County</label>
-						      <input type="text" class="form-control" id="Ccounty" placeholder="อำเภอ">
+								<div class="w-100"></div>
+								<div class="form-group container col-md-11">
+						      <label for="county">อำเภอ</label>
+						      <input type="text" class="form-control" id="Ccounty" placeholder="" required>
+									<div class="invalid-feedback">
+	                	กรุณากรอกข้อมูลในช่องนี้
+	              	</div>
 						    </div>
 						  	<div class="form-group container col-md-11">
-						      <label for="province">Province</label>
-						      <input type="text" class="form-control" id="Cprovince" placeholder="จังหวัด">
+						      <label for="province">จังหวัด</label>
+						      <input type="text" class="form-control" id="Cprovince" placeholder="" required>
+									<div class="invalid-feedback">
+	                	กรุณากรอกข้อมูลในช่องนี้
+	              	</div>
 						    </div>
 						</div>
 					</div>
@@ -98,33 +104,48 @@
 						<div class="col-md-6">
 							<div class="form-group container col-md-11"><h4>ระบุตัวเจ้าของ</h4></div>
 							<div class="form-group container col-md-11">
-						      <label for="firstname">Firstname</label>
-						      <input type="text" class="form-control" id="Cfirstname" placeholder="ชื่อจริง">
+						      <label for="firstname">ชื่อจริง</label>
+						      <input type="text" class="form-control" id="Cfirstname" placeholder="" required>
+									<div class="invalid-feedback">
+	                	กรุณากรอกข้อมูลในช่องนี้
+	              	</div>
 						    </div>
 							<div class="form-group container col-md-11">
-						      <label for="lastname">Lastname</label>
-						      <input type="text" class="form-control" id="Clastname" placeholder="นามสกุล">
+						      <label for="lastname">นามสกุล</label>
+						      <input type="text" class="form-control" id="Clastname" placeholder="" required>
+									<div class="invalid-feedback">
+	                	กรุณากรอกข้อมูลในช่องนี้
+	              	</div>
 						    </div>
 						    <div class="form-group container col-md-11">
-						      <label for="nationality">Nationality</label>
-						      <input type="text" class="form-control" id="Cnationality" placeholder="สัญชาติ">
+						      <label for="nationality">สัญชาติ</label>
+						      <input type="text" class="form-control" id="Cnationality" placeholder="" required>
+									<div class="invalid-feedback">
+	                	กรุณากรอกข้อมูลในช่องนี้
+	              	</div>
 						    </div>
 							<div class="form-group container col-md-11">
-						      <label for="ownerAddress">Owner Address</label>
-						      <input type="text" class="form-control" id="CownerAddress" placeholder="ที่อยู่ของเจ้าของที่ดิน">
+						      <label for="ownerAddress">public key เจ้าของที่ดิน</label>
+						      <input type="text" class="form-control" id="CownerAddress" placeholder="" required>
+									<div class="invalid-feedback">
+	                	กรุณากรอกข้อมูลในช่องนี้
+	              	</div>
 						    </div>
 						</div>
 						<div class="col-md-6">
 							<div class="form-group container col-md-11"><h4>ขนาดที่ดิน</h4></div>
 							<div class="form-group container col-md-11">
-						  	  <label for="size">Size</label>
-						      <input type="text" class="form-control" id="Csize" placeholder="ขนาดที่ดิน(ไร่,งาน,ตารางวา)">
+						  	  <label for="size">ขนาดที่ดิน(ไร่,งาน,ตารางวา)</label>
+						      <input type="text" class="form-control" id="Csize" placeholder="" required>
+									<div class="invalid-feedback">
+	                	กรุณากรอกข้อมูลในช่องนี้
+	              	</div>
 						    </div>
 						</div>
 					</div>
 					<br>
 					<div class="row justify-content-center">
-					    <button type="button" id="createDeed" class="btn btn-dark" data-toggle="modal" data-target="#exampleModalCenter">Create Deed
+					    <button type="submit" id="createDeed" class="btn btn-dark" data-toggle="modal" data-target="#exampleModalCenter">Create Deed
 					    </button><br>
 					</div><br>
 				</form>
@@ -170,6 +191,27 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+	<script>
+ // Example starter JavaScript for disabling form submissions if there are invalid fields
+ (function() {
+   'use strict';
+   window.addEventListener('load', function() {
+     // Fetch all the forms we want to apply custom Bootstrap validation styles to
+     var forms = document.getElementsByClassName('needs-validation');
+     // Loop over them and prevent submission
+     var validation = Array.prototype.filter.call(forms, function(form) {
+       form.addEventListener('submit', function(event) {
+         if (form.checkValidity() === false) {
+           event.preventDefault();
+           event.stopPropagation();
+         }
+         form.classList.add('was-validated');
+       }, false);
+     });
+   }, false);
+ })();
+ </script>
 
 </body>
 </html>
