update field in getDeed follow by create & update js

--- a/html/getDeed.html
+++ b/html/getDeed.html
@@ -78,45 +78,33 @@
 						<div class="col-md-6">
 						  	<div class="form-group container col-md-11"><h4>ตำแหน่งที่ดิน</h4></div>
 							<div class="form-group container col-md-11">
-								<label for="section">Section</label>
-								<input type="text" readonly class="form-control" id="Gsection" placeholder="หมายเลขแผ่นระวางแผนที่">
+								<label for="section">หมายเลขแผ่นระวางแผนที่</label>
+								<input type="text" readonly class="form-control" id="Gsection" placeholder="">
 							</div>
 							<div class="form-group container col-md-11">
-								<label for="numberOfsection">Number Of Section</label>
-								<input type="text" readonly class="form-control" id="GnumberOfsection" placeholder="เลขที่ดิน">
+								<label for="numberOfsection">เลขที่ดิน</label>
+								<input type="text" readonly class="form-control" id="GnumberOfsection" placeholder="">
 							</div>
 							<div class="form-group container col-md-11">
-								<label for="surveyPage">SurveyPage</label>
-								<input type="text" readonly class="form-control" id="GsurveyPage" placeholder="หน้าสำรวจ">
-							</div>
-							<div class="form-group container col-md-11">
-								<label for="district">District</label>
-								<input type="text" readonly class="form-control" id="Gdistrict" placeholder="ตำบล">
+								<label for="district">ตำบล</label>
+								<input type="text" readonly class="form-control" id="Gdistrict" placeholder="">
 							</div>
 						</div>
 						<div class="col-md-6">
-						  	<div class="form-group container col-md-11"><h4>โฉนดที่ดิน</h4></div>
-						  	<div class="form-group container col-md-11">
-						      <label for="documentNumber">Document Number</label>
-						      <input type="text" readonly class="form-control" id="GdocumentNumber" placeholder="เลขที่โฉนด">
-						    </div>
+						  <div class="form-group container col-md-11"><h4>โฉนดที่ดิน</h4></div>
+						  <div class="form-group container col-md-11">
+						     <label for="documentNumber">เลขที่โฉนด</label>
+						     <input type="text" readonly class="form-control" id="GdocumentNumber" placeholder="">
+						   </div>
 							<div class="w-100"></div>
 							<div class="form-group container col-md-11">
-						      <label for="bookNo">Book Number</label>
-						      <input type="text" readonly class="form-control" id="GbookNo" placeholder="เล่ม,แฟ้มรวมโฉนด">
-						    </div>
-						  	<div class="form-group container col-md-11">
-						      <label for="bookPage">Book Page</label>
-						      <input type="text" readonly class="form-control" id="GbookPage" placeholder="ระบุหน้าในเล่ม">
-						    </div>
-							<div class="form-group container col-md-11">
-						      <label for="county">County</label>
-						      <input type="text" readonly class="form-control" id="Gcounty" placeholder="อำเภอ">
-						    </div>
-						  	<div class="form-group container col-md-11">
-						      <label for="province">Province</label>
-						      <input type="text" readonly class="form-control" id="Gprovince" placeholder="จังหวัด">
-						    </div>
+						     <label for="county">อำเภอ</label>
+						     <input type="text" readonly class="form-control" id="Gcounty" placeholder="">
+						   </div>
+						  <div class="form-group container col-md-11">
+						     <label for="province">จังหวัด</label>
+						     <input type="text" readonly class="form-control" id="Gprovince" placeholder="">
+						   </div>
 						</div>
 					</div>
 					   <hr>
@@ -127,24 +115,20 @@
 					  <div class="row justify-content-start">
 
   						<div class="form-group container col-md-5">
-						      <label for="firstname">Firstname</label>
-						      <input type="text" readonly class="form-control" id="Gfirstname" placeholder="ชื่อจริง">
+						      <label for="firstname">ชื่อจริง</label>
+						      <input type="text" readonly class="form-control" id="Gfirstname" placeholder="">
 						    </div>
 						    <div class="form-group container col-md-5">
-						      <label for="lastname">Lastname</label>
-						      <input type="text" readonly class="form-control" id="Glastname" placeholder="นามสกุล">
+						      <label for="lastname">นามสกุล</label>
+						      <input type="text" readonly class="form-control" id="Glastname" placeholder="">
 						    </div>
 						  	<div class="w-100"></div>
 						  	<div class="form-group container col-md-5">
 						    </div>
 						    <div class="w-100"></div>
 						    <div class="form-group container col-md-5">
-						      <label for="nationality">Nationality</label>
-						      <input type="text" readonly class="form-control" id="Gnationality" placeholder="สัญชาติ">
-						    </div>
-							<div class="form-group container col-md-5">
-						      <label for="ownerAddress">Owner Address</label>
-						      <input type="text" readonly class="form-control" id="GownerAddress" placeholder="ที่อยู่ของเจ้าของที่ดิน">
+						      <label for="nationality">สัญชาติ</label>
+						      <input type="text" readonly class="form-control" id="Gnationality" placeholder="">
 						    </div>
 						</div>
 						<hr>
@@ -152,8 +136,8 @@
 						    <div class="form-group container col-md-11"><h4>ขนาดที่ดิน</h4></div>
 						    <div class="w-100"></div>
 						    <div class="form-group container col-md-5">
-						  	  <label for="size">Size</label>
-						      <input type="text" readonly class="form-control" id="Gsize" placeholder="ขนาดที่ดิน(ไร่,งาน,ตารางวา)">
+						  	  <label for="size">ขนาดที่ดิน(ไร่,งาน,ตารางวา)</label>
+						      <input type="text" readonly class="form-control" id="Gsize" placeholder="">
 						    </div>
 						    <div class="form-group container col-md-5">
 						    </div>
