--- a/html/getDeed.html
+++ b/html/getDeed.html
@@ -54,7 +54,7 @@
 					    <div class="col-md-5 my-1">
 					      <div class="input-group">
 					        <div class="input-group-prepend">
-					          <div class="input-group-text">Document Number</div>
+					          <div class="input-group-text">เลขที่โฉนด</div>
 					        </div>
 					        <input type="text" class="form-control" id="GdocumentNumber" placeholder="Document No.">
 					      </div>
