--- a/html/saveTransaction.html
+++ b/html/saveTransaction.html
@@ -47,12 +47,15 @@
 	<div class="container-fluid">
 		<div class="container  bg-light">
 
-			<form id="saveTransaction">
+			<form id="saveTransaction" class="needs-validation" novalidate>
 				<div class="form-group container"><br><h2>Save Transaction(สารบัญจดทะเบียน)</h2></div>
 				<div class="row justify-content-start">
 					<div class="form-group container col-md-5">
 						<label for="documentNumber">เลขที่โฉนด</label>
-						<input type="text" class="form-control" id="STdocumentNumber" placeholder="">
+						<input type="text" class="form-control" id="STdocumentNumber" placeholder="" required>
+						<div class="invalid-feedback">
+							กรุณากรอกข้อมูลในช่องนี้
+						</div>
 					</div>
 				</div><hr>
 				<div class="row justify-content-start">
@@ -60,24 +63,36 @@
 				</div>
 				<div class="row justify-content-start">
 					<div class="form-group container col-md-5">
-						<label for="nameGiver">ผู้ให้สัญญา</label>
-						<input type="text" class="form-control" id="STnameGiver" placeholder="">
+						<label for="nameGiver">public key ผู้ให้สัญญา</label>
+						<input type="text" class="form-control" id="STnameGiver" placeholder="" required>
+						<div class="invalid-feedback">
+							กรุณากรอกข้อมูลในช่องนี้
+						</div>
 					</div>
 					<div class="form-group container col-md-5">
-						<label for="nameReceiver">ผู้รับสัญญา</label>
-						<input type="text" class="form-control" id="STnameReceiver" placeholder="">
+						<label for="nameReceiver">public key ผู้รับสัญญา</label>
+						<input type="text" class="form-control" id="STnameReceiver" placeholder="" required>
+						<div class="invalid-feedback">
+							กรุณากรอกข้อมูลในช่องนี้
+						</div>
 					</div>
 					<div class="form-group container col-md-5">
-						<label for="estateContract">เนื้อที่ดินตามสัญญา</label>
-						<input type="text" class="form-control" id="STestateContract" placeholder="ไร่,งาน,ตารางวา">
+						<label for="estateContract">เงินจำนอง</label>
+						<input type="text" class="form-control" id="STmoney" placeholder="" required>
+						<div class="invalid-feedback">
+							กรุณากรอกข้อมูลในช่องนี้
+						</div>
 					</div>
 					<div class="form-group container col-md-5">
-						<label for="estateRemain">เนื้อที่ดินคงเหลือ</label>
-						<input type="text" class="form-control" id="STestateRemain" placeholder="ไร่,งาน,ตารางวา">
+						<label for="estateContract">ข้อตกลงในสัญญา</label>
+						<textarea class="form-control" id="STdetail" placeholder="" required></textarea>
+						<div class="invalid-feedback">
+							กรุณากรอกข้อมูลในช่องนี้
+						</div>
 					</div>
 				</div><br>
 				<div class="row justify-content-center">
-					<button type="button" id="createDeed" class="btn btn-dark" data-toggle="modal" data-target="#exampleModalCenter">Save Transaction
+					<button type="submit" id="createDeed" class="btn btn-dark" data-toggle="modal" data-target="#exampleModalCenter">Save Transaction
 					</button><br>
 				</div><br>
 			</form>
@@ -122,5 +137,25 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
+	<script>
+ // Example starter JavaScript for disabling form submissions if there are invalid fields
+ (function() {
+   'use strict';
+   window.addEventListener('load', function() {
+     // Fetch all the forms we want to apply custom Bootstrap validation styles to
+     var forms = document.getElementsByClassName('needs-validation');
+     // Loop over them and prevent submission
+     var validation = Array.prototype.filter.call(forms, function(form) {
+       form.addEventListener('submit', function(event) {
+         if (form.checkValidity() === false) {
+           event.preventDefault();
+           event.stopPropagation();
+         }
+         form.classList.add('was-validated');
+       }, false);
+     });
+   }, false);
+ })();
+ </script>
 </body>
 </html>
