--- a/html/getDeed.html
+++ b/html/getDeed.html
@@ -94,7 +94,7 @@
 						  <div class="form-group container col-md-11"><h4>โฉนดที่ดิน</h4></div>
 						  <div class="form-group container col-md-11">
 						     <label for="documentNumber">เลขที่โฉนด</label>
-						     <input type="text" readonly class="form-control" id="GdocumentNumber" placeholder="">
+						     <input type="text" readonly class="form-control" id="GdocumentNumberR" placeholder="">
 						   </div>
 							<div class="w-100"></div>
 							<div class="form-group container col-md-11">
