--- a/html/createDeed.html
+++ b/html/createDeed.html
@@ -8,181 +8,181 @@
 
 	<script src="web3.js"></script>
 	<script src="connectC.js"></script>
-<!--===============================================================================================-->
+	<!--===============================================================================================-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <a class="navbar-brand text-white" style="font-size: 25px;">Deed</a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarNav">
-	    <ul class="navbar-nav">
-	      <li class="nav-item">
-	        <a class="nav-link" href="createDeed.html">Create Deed<span class="sr-only">(current)</span></a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="getDeed.html">Get Deed</a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="saveTransaction.html">Save Transaction</a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="endTransaction.html">End Transaction</a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="getTransaction.html">Get Transaction</a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="checkContract.html">Check Contract</a>
-	      </li>
-	    </ul>
-	  </div>
+		<a class="navbar-brand text-white" style="font-size: 25px;">Deed</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link" href="createDeed.html">Create Deed<span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="getDeed.html">Get Deed</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="saveTransaction.html">Save Transaction</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="endTransaction.html">End Transaction</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="getTransaction.html">Get Transaction</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="checkContract.html">Check Contract</a>
+				</li>
+			</ul>
+		</div>
 	</nav>
 	<br>
 	<div class="container-fluid">
 		<div class="container  bg-light">
 
-				<form id="formGetDeed" class="needs-validation" novalidate>
-					<div class="row justify-content-start">
-						<div class="form-group container"><br><h2>สร้างโฉนดที่ดิน</h2></div>
-						<div class="col-md-6">
-						  	<div class="form-group container col-md-11"><h4>ตำแหน่งที่ดิน</h4></div>
-							<div class="form-group container col-md-11">
-								<label for="section">หมายเลขแผ่นระวางแผนที่</label>
-								<input type="text" class="form-control" id="Csection" placeholder="" required>
-								<div class="invalid-feedback">
-                	กรุณากรอกข้อมูลในช่องนี้
-              	</div>
-							</div>
-							<div class="form-group container col-md-11">
-								<label for="numberOfsection">เลขที่ดิน</label>
-								<input type="text" class="form-control" id="CnumberOfsection" placeholder="" required>
-								<div class="invalid-feedback">
-                	กรุณากรอกข้อมูลในช่องนี้
-              	</div>
-							</div>
-							<div class="form-group container col-md-11">
-								<label for="district">ตำบล</label>
-								<input type="text" class="form-control" id="Cdistrict" placeholder="" required>
-								<div class="invalid-feedback">
-                	กรุณากรอกข้อมูลในช่องนี้
-              	</div>
+			<form id="formGetDeed" class="needs-validation" novalidate>
+				<div class="row justify-content-start">
+					<div class="form-group container"><br><h2>สร้างโฉนดที่ดิน</h2></div>
+					<div class="col-md-6">
+						<div class="form-group container col-md-11"><h4>ตำแหน่งที่ดิน</h4></div>
+						<div class="form-group container col-md-11">
+							<label for="section">หมายเลขแผ่นระวางแผนที่</label>
+							<input type="text" class="form-control" id="Csection" placeholder="" required>
+							<div class="invalid-feedback">
+								กรุณากรอกข้อมูลในช่องนี้
 							</div>
 						</div>
-						<div class="col-md-6">
-						  	<div class="form-group container col-md-11"><h4>โฉนดที่ดิน</h4></div>
-						  	<div class="form-group container col-md-11">
-						      <label for="documentNumber">เลขที่โฉนด</label>
-						      <input type="text" class="form-control" id="CdocumentNumber" placeholder="" required>
-									<div class="invalid-feedback">
-	                	กรุณากรอกข้อมูลในช่องนี้
-	              	</div>
-						    </div>
-								<div class="w-100"></div>
-								<div class="form-group container col-md-11">
-						      <label for="county">อำเภอ</label>
-						      <input type="text" class="form-control" id="Ccounty" placeholder="" required>
-									<div class="invalid-feedback">
-	                	กรุณากรอกข้อมูลในช่องนี้
-	              	</div>
-						    </div>
-						  	<div class="form-group container col-md-11">
-						      <label for="province">จังหวัด</label>
-						      <input type="text" class="form-control" id="Cprovince" placeholder="" required>
-									<div class="invalid-feedback">
-	                	กรุณากรอกข้อมูลในช่องนี้
-	              	</div>
-						    </div>
+						<div class="form-group container col-md-11">
+							<label for="numberOfsection">เลขที่ดิน</label>
+							<input type="text" class="form-control" id="CnumberOfsection" placeholder="" required>
+							<div class="invalid-feedback">
+								กรุณากรอกข้อมูลในช่องนี้
+							</div>
+						</div>
+						<div class="form-group container col-md-11">
+							<label for="district">ตำบล</label>
+							<input type="text" class="form-control" id="Cdistrict" placeholder="" required>
+							<div class="invalid-feedback">
+								กรุณากรอกข้อมูลในช่องนี้
+							</div>
 						</div>
 					</div>
-					<hr>
-					<div class="row justify-content-start">
-						<div class="col-md-6">
-							<div class="form-group container col-md-11"><h4>ระบุตัวเจ้าของ</h4></div>
-							<div class="form-group container col-md-11">
-						      <label for="firstname">ชื่อจริง</label>
-						      <input type="text" class="form-control" id="Cfirstname" placeholder="" required>
-									<div class="invalid-feedback">
-	                	กรุณากรอกข้อมูลในช่องนี้
-	              	</div>
-						    </div>
-							<div class="form-group container col-md-11">
-						      <label for="lastname">นามสกุล</label>
-						      <input type="text" class="form-control" id="Clastname" placeholder="" required>
-									<div class="invalid-feedback">
-	                	กรุณากรอกข้อมูลในช่องนี้
-	              	</div>
-						    </div>
-						    <div class="form-group container col-md-11">
-						      <label for="nationality">สัญชาติ</label>
-						      <input type="text" class="form-control" id="Cnationality" placeholder="" required>
-									<div class="invalid-feedback">
-	                	กรุณากรอกข้อมูลในช่องนี้
-	              	</div>
-						    </div>
-							<div class="form-group container col-md-11">
-						      <label for="ownerAddress">public key เจ้าของที่ดิน</label>
-						      <input type="text" class="form-control" id="CownerAddress" placeholder="" required>
-									<div class="invalid-feedback">
-	                	กรุณากรอกข้อมูลในช่องนี้
-	              	</div>
-						    </div>
+					<div class="col-md-6">
+						<div class="form-group container col-md-11"><h4>โฉนดที่ดิน</h4></div>
+						<div class="form-group container col-md-11">
+							<label for="documentNumber">เลขที่โฉนด</label>
+							<input type="text" class="form-control" id="CdocumentNumber" placeholder="" required>
+							<div class="invalid-feedback">
+								กรุณากรอกข้อมูลในช่องนี้
+							</div>
 						</div>
-						<div class="col-md-6">
-							<div class="form-group container col-md-11"><h4>ขนาดที่ดิน</h4></div>
-							<div class="form-group container col-md-11">
-						  	  <label for="size">ขนาดที่ดิน(ไร่,งาน,ตารางวา)</label>
-						      <input type="text" class="form-control" id="Csize" placeholder="" required>
-									<div class="invalid-feedback">
-	                	กรุณากรอกข้อมูลในช่องนี้
-	              	</div>
-						    </div>
+						<div class="w-100"></div>
+						<div class="form-group container col-md-11">
+							<label for="county">อำเภอ</label>
+							<input type="text" class="form-control" id="Ccounty" placeholder="" required>
+							<div class="invalid-feedback">
+								กรุณากรอกข้อมูลในช่องนี้
+							</div>
+						</div>
+						<div class="form-group container col-md-11">
+							<label for="province">จังหวัด</label>
+							<input type="text" class="form-control" id="Cprovince" placeholder="" required>
+							<div class="invalid-feedback">
+								กรุณากรอกข้อมูลในช่องนี้
+							</div>
 						</div>
 					</div>
-					<br>
-					<div class="row justify-content-center">
-					    <button type="submit" id="createDeed" class="btn btn-dark" data-toggle="modal" data-target="#exampleModalCenter">Create Deed
-					    </button><br>
-					</div><br>
-				</form>
+				</div>
+				<hr>
+				<div class="row justify-content-start">
+					<div class="col-md-6">
+						<div class="form-group container col-md-11"><h4>ระบุตัวเจ้าของ</h4></div>
+						<div class="form-group container col-md-11">
+							<label for="firstname">ชื่อจริง</label>
+							<input type="text" class="form-control" id="Cfirstname" placeholder="" required>
+							<div class="invalid-feedback">
+								กรุณากรอกข้อมูลในช่องนี้
+							</div>
+						</div>
+						<div class="form-group container col-md-11">
+							<label for="lastname">นามสกุล</label>
+							<input type="text" class="form-control" id="Clastname" placeholder="" required>
+							<div class="invalid-feedback">
+								กรุณากรอกข้อมูลในช่องนี้
+							</div>
+						</div>
+						<div class="form-group container col-md-11">
+							<label for="nationality">สัญชาติ</label>
+							<input type="text" class="form-control" id="Cnationality" placeholder="" required>
+							<div class="invalid-feedback">
+								กรุณากรอกข้อมูลในช่องนี้
+							</div>
+						</div>
+						<div class="form-group container col-md-11">
+							<label for="ownerAddress">public key เจ้าของที่ดิน</label>
+							<input type="text" class="form-control" id="CownerAddress" placeholder="" required>
+							<div class="invalid-feedback">
+								กรุณากรอกข้อมูลในช่องนี้
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="form-group container col-md-11"><h4>ขนาดที่ดิน</h4></div>
+						<div class="form-group container col-md-11">
+							<label for="size">ขนาดที่ดิน(ไร่,งาน,ตารางวา)</label>
+							<input type="text" class="form-control" id="Csize" placeholder="" required>
+							<div class="invalid-feedback">
+								กรุณากรอกข้อมูลในช่องนี้
+							</div>
+						</div>
+					</div>
+				</div>
+				<br>
+				<div class="row justify-content-center">
+					<button type="button" id="createDeed" class="btn btn-dark">Create Deed
+					</button><br>
+				</div><br>
+			</form>
 
 		</div>
 	</div>
 
 
-		<!-- Modal -->
-		<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-		  <div class="modal-dialog modal-dialog-centered" role="document">
-		    <div class="modal-content">
-		      <div class="modal-header">
-		        <h5 class="modal-title" id="exampleModalLongTitle">Login</h5>
-		        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-		          <span aria-hidden="true">&times;</span>
-		        </button>
-		      </div>
-		      <div class="modal-body">
-		        <form>
-		          <div class="form-group">
-		            <label for="username" class="col-form-label">Username:</label>
-		            <input type="text" class="form-control" id="username">
-		          </div>
-		          <div class="form-group">
-		            <label for="password" class="col-form-label">Password:</label>
-		            <input type="text" class="form-control" id="password">
-		          </div>
-		        </form>
-		      </div>
-		      <div class="modal-footer">
-		        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-		        <button type="button" class="btn btn-dark" onclick="sendDocument();">Login</button>
-		      </div>
-		    </div>
-		  </div>
+	<!-- Modal -->
+	<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLongTitle">Login</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<form>
+						<div class="form-group">
+							<label for="username" class="col-form-label">Username:</label>
+							<input type="text" class="form-control" id="username">
+						</div>
+						<div class="form-group">
+							<label for="password" class="col-form-label">Password:</label>
+							<input type="text" class="form-control" id="password">
+						</div>
+					</form>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-dark" onclick="sendDocument();">Login</button>
+				</div>
+			</div>
 		</div>
+	</div>
 
 
 
@@ -193,25 +193,27 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 	<script>
- // Example starter JavaScript for disabling form submissions if there are invalid fields
- (function() {
-   'use strict';
-   window.addEventListener('load', function() {
-     // Fetch all the forms we want to apply custom Bootstrap validation styles to
-     var forms = document.getElementsByClassName('needs-validation');
-     // Loop over them and prevent submission
-     var validation = Array.prototype.filter.call(forms, function(form) {
-       form.addEventListener('submit', function(event) {
-         if (form.checkValidity() === false) {
-           event.preventDefault();
-           event.stopPropagation();
-         }
-         form.classList.add('was-validated');
-       }, false);
-     });
-   }, false);
- })();
- </script>
+	// Example starter JavaScript for disabling form submissions if there are invalid fields
+	(function() {
+		'use strict';
+		window.addEventListener('load', function() {
+			// Fetch all the forms we want to apply custom Bootstrap validation styles to
+			var forms = document.getElementsByClassName('needs-validation');
+			// Loop over them and prevent submission
+			var validation = Array.prototype.filter.call(forms, function(form) {
+				document.getElementById('createDeed').addEventListener('click', function(event) {
+					if (form.checkValidity() === false) {
+						event.preventDefault();
+						event.stopPropagation();
+					}else {
+						$('#exampleModalCenter').modal();
+					}
+					form.classList.add('was-validated');
+				}, false);
+			});
+		}, false);
+	})();
+	</script>
 
 </body>
 </html>
