--- a/html/createDeed.html
+++ b/html/createDeed.html
@@ -145,7 +145,7 @@
 				</div>
 				<br>
 				<div class="row justify-content-center">
-					<button type="button" id="createDeed" class="btn btn-dark">Create Deed
+					<button type="button" id="createDeed" class="btn btn-dark">สร้างโฉนดที่ดิน
 					</button><br>
 				</div><br>
 			</form>
