--- a/html/getDeed.html
+++ b/html/getDeed.html
@@ -48,7 +48,7 @@
 		<div class="container bg-light">
 
 				<form>
-				 	<div class="form-group col-md-11"><br><h2>Get Deed</h2></div>
+				 	<div class="form-group col-md-11"><br><h2>รายละเอียดโฉนดที่ดิน</h2></div>
 					 <div class="form-row justify-content-center">
 
 					    <div class="col-md-5 my-1">
@@ -61,7 +61,7 @@
 					    </div>
 
 					    <div class="form-group col-auto my-1">
-					      <button type="button" id="getDeed" class="btn btn-dark" data-toggle="modal" data-target="#exampleModalCenter">Get Deed</button>
+					      <button type="button" id="getDeed" class="btn btn-dark" data-toggle="modal" data-target="#exampleModalCenter">ดูรายละเอียด</button>
 					    </div>
 					    <div class="form-group container col-md-10"></div>
 					    <hr>
