--- a/html/saveTransaction.html
+++ b/html/saveTransaction.html
@@ -48,7 +48,7 @@
 		<div class="container  bg-light">
 
 			<form id="saveTransaction" class="needs-validation" novalidate>
-				<div class="form-group container"><br><h2>Save Transaction(สารบัญจดทะเบียน)</h2></div>
+				<div class="form-group container"><br><h2>จดทะเบียนจำนอง</h2></div>
 				<div class="row justify-content-start">
 					<div class="form-group container col-md-5">
 						<label for="documentNumber">เลขที่โฉนด</label>
@@ -92,7 +92,7 @@
 					</div>
 				</div><br>
 				<div class="row justify-content-center">
-					<button type="submit" id="createDeed" class="btn btn-dark" data-toggle="modal" data-target="#exampleModalCenter">Save Transaction
+					<button type="button" id="createTransaction" class="btn btn-dark" >บันทึกธุรกรรม
 					</button><br>
 				</div><br>
 			</form>
@@ -138,24 +138,27 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 	<script>
- // Example starter JavaScript for disabling form submissions if there are invalid fields
- (function() {
-   'use strict';
-   window.addEventListener('load', function() {
-     // Fetch all the forms we want to apply custom Bootstrap validation styles to
-     var forms = document.getElementsByClassName('needs-validation');
-     // Loop over them and prevent submission
-     var validation = Array.prototype.filter.call(forms, function(form) {
-       form.addEventListener('submit', function(event) {
-         if (form.checkValidity() === false) {
-           event.preventDefault();
-           event.stopPropagation();
-         }
-         form.classList.add('was-validated');
-       }, false);
-     });
-   }, false);
- })();
- </script>
+	// Example starter JavaScript for disabling form submissions if there are invalid fields
+	(function() {
+		'use strict';
+		window.addEventListener('load', function() {
+			// Fetch all the forms we want to apply custom Bootstrap validation styles to
+			var forms = document.getElementsByClassName('needs-validation');
+			// Loop over them and prevent submission
+			var validation = Array.prototype.filter.call(forms, function(form) {
+				document.getElementById('createTransaction').addEventListener('click', function(event) {
+					if (form.checkValidity() === false) {
+						event.preventDefault();
+						event.stopPropagation();
+					}else {
+						$('#exampleModalCenter').modal();
+					}
+					form.classList.add('was-validated');
+				}, false);
+			});
+		}, false);
+	})();
+	</script>
+
 </body>
 </html>
