add toggle in getTran

--- a/html/getTransaction.html
+++ b/html/getTransaction.html
@@ -87,7 +87,7 @@
 						<label class="custom-control-label" for="customSwitch2"></label>
 					</div>
 				</div>
-				<div id="customSwitchFrom2">
+				<div id="customSwitchForm2">
 					<div class="row justify-content-start">
 						<div class="form-group container col-md-11"><h4>รายละเอียด</h4></div>
 					</div>
